--- a/app/src/main/res/layout/activity_booking_successfully.xml
+++ b/app/src/main/res/layout/activity_booking_successfully.xml
@@ -73,6 +73,7 @@
 
 
             <TextView
+                android:id="@+id/tvBacktoHome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_8dp"
