--- a/app/src/main/res/layout/activity_booking_summary.xml
+++ b/app/src/main/res/layout/activity_booking_summary.xml
@@ -422,90 +422,103 @@
                      android:layout_marginBottom="10dp"
                      android:background="@color/gray2" />
 
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:fontFamily="@font/avenir_black"
-                 android:textAlignment="textStart"
-                 android:layout_marginEnd="@dimen/margin_16dp"
-                 android:layout_marginStart="@dimen/margin_16dp"
-                 android:layout_marginTop="@dimen/margin_8dp"
-                 android:text="@string/packages"
-                 android:textColor="@color/colorPrimaryDark"
-                 android:textSize="12sp" />
-
-
-
-
-
-             <RelativeLayout
+             <LinearLayout
+                 android:visibility="gone"
+                 android:id="@+id/llBookingWithPackage"
+                 android:orientation="vertical"
                  android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_marginEnd="@dimen/margin_16dp"
-                 android:layout_marginStart="@dimen/margin_16dp"
-                 android:layout_marginTop="@dimen/margin_8dp">
+                 android:layout_height="wrap_content">
 
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:layout_alignParentStart="true"
-                     android:fontFamily="@font/avenir_light"
-                     android:text="plus one month package"
+                     android:fontFamily="@font/avenir_black"
+                     android:textAlignment="textStart"
+                     android:layout_marginEnd="@dimen/margin_16dp"
+                     android:layout_marginStart="@dimen/margin_16dp"
                      android:layout_marginTop="@dimen/margin_8dp"
-                     android:textColor="@color/colorTextLightDark"
+                     android:text="@string/packages"
+                     android:textColor="@color/colorPrimaryDark"
                      android:textSize="12sp" />
 
-                 <TextView
-                     android:id="@+id/tvPackage_price"
-                     android:layout_width="wrap_content"
+                 <RelativeLayout
+                     android:layout_width="match_parent"
                      android:layout_height="wrap_content"
-                     android:layout_alignParentEnd="true"
-                     android:fontFamily="@font/avenir_black"
-                     android:text="SAR 200"
-                     android:textAllCaps="true"
-                     android:textColor="@color/colorTextLightDark"
-                     android:textSize="13sp" />
+                     android:layout_marginEnd="@dimen/margin_16dp"
+                     android:layout_marginStart="@dimen/margin_16dp"
+                     android:layout_marginTop="@dimen/margin_8dp">
 
-             </RelativeLayout>
+                     <TextView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_alignParentStart="true"
+                         android:fontFamily="@font/avenir_light"
+                         android:text="plus one month package"
+                         android:layout_marginTop="@dimen/margin_8dp"
+                         android:textColor="@color/colorTextLightDark"
+                         android:textSize="12sp" />
 
-             <RelativeLayout
-                 android:id="@+id/rlPackageVat"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_marginEnd="@dimen/margin_16dp"
-                 android:layout_marginStart="@dimen/margin_16dp"
-                 android:layout_marginTop="@dimen/margin_8dp">
+                     <TextView
+                         android:id="@+id/tvPackage_price"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_alignParentEnd="true"
+                         android:fontFamily="@font/avenir_black"
+                         android:text="SAR 200"
+                         android:textAllCaps="true"
+                         android:textColor="@color/colorTextLightDark"
+                         android:textSize="13sp" />
 
-                 <TextView
-                     android:id="@+id/tvPackageTax"
-                     android:layout_width="wrap_content"
+                 </RelativeLayout>
+
+                <RelativeLayout
+                     android:id="@+id/rlPackageVat"
+                     android:layout_width="match_parent"
                      android:layout_height="wrap_content"
-                     android:layout_alignParentStart="true"
-                     android:fontFamily="@font/avenir_light"
-                     android:text="Vat 5%"
-                     android:textColor="@color/colorTextLightDark"
-                     android:textSize="12sp" />
+                     android:layout_marginEnd="@dimen/margin_16dp"
+                     android:layout_marginStart="@dimen/margin_16dp"
+                     android:layout_marginTop="@dimen/margin_8dp">
 
-                 <TextView
-                     android:id="@+id/tvPackageTaxCharges"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_alignParentEnd="true"
-                     android:fontFamily="@font/avenir_black"
-                     android:text="SAR 20"
-                     android:textAllCaps="true"
-                     android:textColor="@color/colorTextLightDark"
-                     android:textSize="13sp" />
+                     <TextView
+                         android:id="@+id/tvPackageTax"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_alignParentStart="true"
+                         android:fontFamily="@font/avenir_light"
+                         android:text="Vat 5%"
+                         android:textColor="@color/colorTextLightDark"
+                         android:textSize="12sp" />
 
-             </RelativeLayout>
+                     <TextView
+                         android:id="@+id/tvPackageTaxCharges"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_alignParentEnd="true"
+                         android:fontFamily="@font/avenir_black"
+                         android:text="SAR 20"
+                         android:textAllCaps="true"
+                         android:textColor="@color/colorTextLightDark"
+                         android:textSize="13sp" />
 
-             <View
-                 android:layout_width="match_parent"
-                 android:layout_height="0.5dp"
-                 android:layout_marginStart="10dp"
-                 android:layout_marginTop="10dp"
-                 android:layout_marginBottom="10dp"
-                 android:background="@color/gray2" />
+                 </RelativeLayout>
+
+                 <View
+                     android:layout_width="match_parent"
+                     android:layout_height="0.5dp"
+                     android:layout_marginStart="10dp"
+                     android:layout_marginTop="10dp"
+                     android:layout_marginBottom="10dp"
+                     android:background="@color/gray2" />
+
+
+
+             </LinearLayout>
+
+
+
+
+
+
 
 
              <RelativeLayout
