--- a/app/src/main/res/layout/activity_trainer_details.xml
+++ b/app/src/main/res/layout/activity_trainer_details.xml
@@ -9,6 +9,8 @@
     </data>
 
     <RelativeLayout
+        android:visibility="gone"
+        android:id="@+id/llTrainerMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -64,6 +66,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+
                     android:background="@drawable/dialog_curve_bg"
                     android:layout_width="match_parent"
                     android:orientation="vertical"
