--- a/app/src/main/res/layout/activity_booking_summary.xml
+++ b/app/src/main/res/layout/activity_booking_summary.xml
@@ -180,54 +180,108 @@
 
                      </LinearLayout>
 
-
                      <LinearLayout
-                         android:id="@+id/llPackage"
                          android:layout_width="wrap_content"
-                         android:layout_marginTop="@dimen/margin_24dp"
-                         android:layout_marginBottom="@dimen/margin_16dp"
-                         android:layout_marginStart="@dimen/margin_16dp"
-                         android:layout_height="wrap_content"
-                         android:orientation="horizontal"
-                         android:visibility="visible">
-
-                         <ImageView
-                             android:layout_width="@dimen/dimen_40"
-                             android:layout_height="@dimen/dimen_40"
-                             android:padding="8dp"
-                             android:src="@drawable/ic_resource_package">
-
-                         </ImageView>
+                         android:layout_height="wrap_content">
 
                          <LinearLayout
-                             android:layout_marginTop="@dimen/margin_8dp"
+                             android:id="@+id/llPackage"
                              android:layout_width="wrap_content"
+                             android:layout_marginTop="@dimen/margin_24dp"
+                             android:layout_marginBottom="@dimen/margin_16dp"
+                             android:layout_marginStart="@dimen/margin_16dp"
                              android:layout_height="wrap_content"
-                             android:orientation="vertical">
+                             android:orientation="horizontal"
+                             android:visibility="visible">
 
-                             <TextView
+                             <ImageView
+                                 android:layout_width="@dimen/dimen_40"
+                                 android:layout_height="@dimen/dimen_40"
+                                 android:padding="8dp"
+                                 android:src="@drawable/ic_resource_package">
+
+                             </ImageView>
+
+                             <LinearLayout
+                                 android:layout_marginTop="@dimen/margin_8dp"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
-                                 android:text="@string/packages"
-                                 android:textSize="@dimen/font_12sp"
-                                 android:singleLine="true"
-                                 android:fontFamily="@font/avenir_black"
-                                 android:textColor="@color/gray5"/>
+                                 android:orientation="vertical">
 
-                             <TextView
-                                 android:id="@+id/tvPackages"
+                                 <TextView
+                                     android:layout_width="wrap_content"
+                                     android:layout_height="wrap_content"
+                                     android:text="@string/packages"
+                                     android:textSize="@dimen/font_12sp"
+                                     android:singleLine="true"
+                                     android:fontFamily="@font/avenir_black"
+                                     android:textColor="@color/gray5"/>
+
+                                 <TextView
+                                     android:id="@+id/tvPackages"
+                                     android:layout_width="wrap_content"
+                                     android:layout_height="wrap_content"
+                                     android:singleLine="true"
+                                     android:text=""
+                                     android:layout_marginTop="5dp"
+                                     android:textSize="@dimen/font_12sp"
+                                     android:fontFamily="@font/avenir_black"
+                                     android:textColor="@color/colorPrimaryDark"/>
+
+                             </LinearLayout>
+
+                         </LinearLayout>
+
+                         <LinearLayout
+                             android:id="@+id/llPeople"
+                             android:layout_width="wrap_content"
+                             android:layout_marginTop="@dimen/margin_24dp"
+                             android:layout_marginBottom="@dimen/margin_16dp"
+                             android:layout_marginStart="@dimen/dimen_50"
+                             android:layout_height="wrap_content"
+                             android:orientation="horizontal"
+                             android:visibility="visible">
+
+                             <ImageView
+                                 android:layout_width="@dimen/dimen_40"
+                                 android:layout_height="@dimen/dimen_40"
+                                 android:padding="8dp"
+                                 android:src="@drawable/people">
+
+                             </ImageView>
+
+                             <LinearLayout
+                                 android:layout_marginTop="@dimen/margin_8dp"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
-                                 android:singleLine="true"
-                                 android:text=""
-                                 android:layout_marginTop="5dp"
-                                 android:textSize="@dimen/font_12sp"
-                                 android:fontFamily="@font/avenir_black"
-                                 android:textColor="@color/colorPrimaryDark"/>
+                                 android:orientation="vertical">
+
+                                 <TextView
+                                     android:layout_width="wrap_content"
+                                     android:layout_height="wrap_content"
+                                     android:text="@string/people"
+                                     android:textSize="@dimen/font_12sp"
+                                     android:singleLine="true"
+                                     android:fontFamily="@font/avenir_black"
+                                     android:textColor="@color/gray5"/>
+
+                                 <TextView
+                                     android:id="@+id/tvNo_ofPeopleTraining"
+                                     android:layout_width="wrap_content"
+                                     android:layout_height="wrap_content"
+                                     android:singleLine="true"
+                                     android:text=""
+                                     android:layout_marginTop="5dp"
+                                     android:textSize="@dimen/font_12sp"
+                                     android:fontFamily="@font/avenir_black"
+                                     android:textColor="@color/colorPrimaryDark"/>
+
+                             </LinearLayout>
 
                          </LinearLayout>
 
                      </LinearLayout>
+
 
 
                  </LinearLayout>
@@ -301,6 +355,7 @@
                              android:fontFamily="@font/avenir_light"
                              android:paddingStart="@dimen/dimen_15"
                              android:paddingEnd="@dimen/dimen_15"
+                             android:visibility="gone"
                              android:background="@drawable/remove_bg"
                              android:drawablePadding="@dimen/margin_8dp"
                              app:drawableTint="@color/red"
@@ -340,6 +395,14 @@
 
                  </LinearLayout>
 
+
+             <LinearLayout
+                 android:id="@+id/llBookingWithPerSession"
+                 android:visibility="gone"
+                 android:orientation="vertical"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content">
+
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
@@ -351,7 +414,6 @@
                      android:text="@string/personal_trainer"
                      android:textColor="@color/colorPrimaryDark"
                      android:textSize="12sp" />
-
 
                  <RelativeLayout
                      android:id="@+id/rlPersonalTrainer"
@@ -371,7 +433,7 @@
                          android:textSize="12sp" />
 
                      <TextView
-                         android:id="@+id/tvPersonal_trainer"
+                         android:id="@+id/tvPersonal_trainer_price"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentEnd="true"
@@ -382,6 +444,40 @@
                          android:textSize="13sp" />
 
                  </RelativeLayout>
+
+
+                 <RelativeLayout
+                     android:id="@+id/rltTrainerOfferDiscount"
+                     android:visibility="gone"
+                     android:layout_marginEnd="@dimen/margin_16dp"
+                     android:layout_marginStart="@dimen/margin_16dp"
+                     android:layout_marginTop="@dimen/margin_8dp"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content">
+
+                     <TextView
+                         android:id="@+id/tvTrainerOfferPercentage"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_alignParentStart="true"
+                         android:fontFamily="@font/avenir_light"
+                         android:text="Discount 20%"
+                         android:textColor="@color/colorTextHeading"
+                         android:textSize="12sp" />
+
+                     <TextView
+                         android:id="@+id/tvTrainerOfferPrice"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_alignParentEnd="true"
+                         android:fontFamily="@font/avenir_black"
+                         android:text="80"
+                         android:textAllCaps="true"
+                         android:textColor="@color/colorTextLightDark"
+                         android:textSize="13sp" />
+
+                 </RelativeLayout>
+
 
                  <RelativeLayout
                      android:id="@+id/rlVat"
@@ -422,8 +518,11 @@
                      android:layout_marginBottom="10dp"
                      android:background="@color/gray2" />
 
+
+             </LinearLayout>
+
              <LinearLayout
-                 android:visibility="gone"
+                 android:visibility="visible"
                  android:id="@+id/llBookingWithPackage"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
@@ -449,11 +548,12 @@
                      android:layout_marginTop="@dimen/margin_8dp">
 
                      <TextView
+                         android:id="@+id/tvPackageName"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentStart="true"
                          android:fontFamily="@font/avenir_light"
-                         android:text="plus one month package"
+                         android:text="dsf"
                          android:layout_marginTop="@dimen/margin_8dp"
                          android:textColor="@color/colorTextLightDark"
                          android:textSize="12sp" />
@@ -471,7 +571,43 @@
 
                  </RelativeLayout>
 
-                <RelativeLayout
+
+                 <RelativeLayout
+                     android:id="@+id/rltPackageOfferDiscount"
+                     android:visibility="visible"
+                     android:layout_marginEnd="@dimen/margin_16dp"
+                     android:layout_marginStart="@dimen/margin_16dp"
+                     android:layout_marginTop="@dimen/margin_8dp"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content">
+
+                     <TextView
+                         android:id="@+id/tvPackageOfferPercentage"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_alignParentStart="true"
+                         android:fontFamily="@font/avenir_light"
+                         android:text="Discount 20%"
+                         android:textColor="@color/colorTextHeading"
+                         android:textSize="12sp" />
+
+                     <TextView
+                         android:id="@+id/tvPackageOfferPrice"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_alignParentEnd="true"
+                         android:fontFamily="@font/avenir_black"
+                         android:text="80"
+                         android:textAllCaps="true"
+                         android:textColor="@color/colorTextLightDark"
+                         android:textSize="13sp" />
+
+                 </RelativeLayout>
+
+
+
+
+                 <RelativeLayout
                      android:id="@+id/rlPackageVat"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
@@ -485,12 +621,12 @@
                          android:layout_height="wrap_content"
                          android:layout_alignParentStart="true"
                          android:fontFamily="@font/avenir_light"
-                         android:text="Vat 5%"
+                         android:text="Vat 2%"
                          android:textColor="@color/colorTextLightDark"
                          android:textSize="12sp" />
 
                      <TextView
-                         android:id="@+id/tvPackageTaxCharges"
+                         android:id="@+id/tvPackageTainerTaxCharges"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentEnd="true"
@@ -501,6 +637,9 @@
                          android:textSize="13sp" />
 
                  </RelativeLayout>
+
+
+
 
                  <View
                      android:layout_width="match_parent"
@@ -513,11 +652,6 @@
 
 
              </LinearLayout>
-
-
-
-
-
 
 
 
