--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,8 @@
 
 
     <LinearLayout
+        android:id="@+id/llMain"
+        android:visibility="gone"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -53,7 +55,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dimen_120"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
@@ -73,7 +75,7 @@
                     android:id="@+id/tvOfferMsg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="hey,Rehab"
+                    android:text=""
                     android:maxLines="2"
                     android:textSize="@dimen/font_12sp"
                     android:layout_marginStart="@dimen/dimen_5"
