--- a/app/src/main/res/layout/activity_booking_summary.xml
+++ b/app/src/main/res/layout/activity_booking_summary.xml
@@ -709,7 +709,7 @@
 
 
                   <androidx.appcompat.widget.SwitchCompat
-                    android:id="@+id/switchAllDay"
+                    android:id="@+id/switchAutoRenewMembership"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
