--- a/app/src/main/res/layout/activity_center_detail_booking.xml
+++ b/app/src/main/res/layout/activity_center_detail_booking.xml
@@ -9,6 +9,7 @@
     </data>
 
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/rltCenterDetail"
         android:orientation="vertical"
         android:layout_width="match_parent"
