--- a/app/src/main/res/layout/activity_center_trainer_booking_summary.xml
+++ b/app/src/main/res/layout/activity_center_trainer_booking_summary.xml
@@ -42,7 +42,7 @@
                         android:layout_marginStart="@dimen/margin_16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Bard Cencer"
+                        android:text=""
                         android:textSize="@dimen/font_14sp"
                         android:textColor="@color/colorPrimaryDark"
                         android:fontFamily="@font/avenir_black" />
@@ -76,15 +76,16 @@
                     </LinearLayout>
 
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_marginTop="@dimen/margin_16dp"
                         android:layout_width="wrap_content"
                         android:layout_marginStart="@dimen/margin_16dp"
                         android:layout_height="wrap_content">
 
                         <LinearLayout
+                            android:layout_alignParentStart="true"
                             android:id="@+id/llTenure"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:gravity="end"
@@ -131,11 +132,10 @@
 
                         <LinearLayout
                             android:id="@+id/llJoining"
-                            android:layout_width="match_parent"
-                            android:layout_weight="1"
-                            android:layout_marginStart="@dimen/dimen_50"
+                            android:layout_width="wrap_content"
+                            android:layout_alignParentEnd="true"
                             android:layout_height="wrap_content"
-                            android:gravity="end"
+                            android:layout_marginEnd="@dimen/dimen_24"
                             android:orientation="horizontal"
                             android:visibility="visible">
 
@@ -178,9 +178,9 @@
                         </LinearLayout>
 
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
 
@@ -189,6 +189,7 @@
                             android:layout_width="wrap_content"
                             android:layout_marginTop="@dimen/margin_24dp"
                             android:layout_marginBottom="@dimen/margin_16dp"
+                            android:layout_alignParentStart="true"
                             android:layout_marginStart="@dimen/margin_16dp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -236,8 +237,9 @@
                             android:id="@+id/llPeople"
                             android:layout_width="wrap_content"
                             android:layout_marginTop="@dimen/margin_24dp"
+                            android:layout_alignParentEnd="true"
                             android:layout_marginBottom="@dimen/margin_16dp"
-                            android:layout_marginStart="@dimen/dimen_50"
+                            android:layout_marginEnd="@dimen/dimen_50"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:visibility="visible">
@@ -280,7 +282,7 @@
 
                         </LinearLayout>
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
 
 
@@ -379,7 +381,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/avenir_black"
-                        android:padding="10dp"
+                        android:paddingStart="@dimen/dimen_5"
+                        android:paddingTop="@dimen/dimen_5"
                         android:textAlignment="textStart"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="10dp"
@@ -390,8 +393,70 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvSelectedSlots"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:visibility="visible"
+                    android:id="@+id/llBookingCenter"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dimen_5"/>
+                        android:fontFamily="@font/avenir_black"
+                        android:textAlignment="textStart"
+                        android:layout_marginEnd="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginTop="@dimen/margin_8dp"
+                        android:text="@string/packages"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="12sp" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginTop="@dimen/margin_8dp">
+
+                        <TextView
+                            android:id="@+id/tvCenterName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:fontFamily="@font/avenir_light"
+                            android:text=""
+                            android:textColor="@color/colorTextLightDark"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/tvCenter_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:fontFamily="@font/avenir_black"
+                            android:text=""
+                            android:textAllCaps="true"
+                            android:textColor="@color/colorTextLightDark"
+                            android:textSize="13sp" />
+
+                    </RelativeLayout>
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="@color/gray2" />
+
+
 
                 </LinearLayout>
 
@@ -521,8 +586,9 @@
 
                 </LinearLayout>
 
+
                 <LinearLayout
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:id="@+id/llBookingWithPackage"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -536,7 +602,7 @@
                         android:layout_marginEnd="@dimen/margin_16dp"
                         android:layout_marginStart="@dimen/margin_16dp"
                         android:layout_marginTop="@dimen/margin_8dp"
-                        android:text="@string/packages"
+                        android:text="@string/personal_trainer"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="12sp" />
 
@@ -652,7 +718,6 @@
 
 
                 </LinearLayout>
-
 
 
                 <RelativeLayout
