--- a/app/src/main/res/layout/fragment_completed_booking.xml
+++ b/app/src/main/res/layout/fragment_completed_booking.xml
@@ -7,20 +7,70 @@
         <import type="android.view.View" />
     </data>
 
-    <LinearLayout
+    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:text="Completed"
-            android:gravity="center"
+        <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_height="wrap_content">
 
-        </TextView>
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/llRecyclerView"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <LinearLayout
+                        android:id="@+id/llNoUpComingBooking"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:id="@+id/ivNoImage"
+                            android:layout_width="200dp"
+                            android:layout_height="150dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_no_membership"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="5dp" />
 
 
-    </LinearLayout>
+                        <TextView
+                            android:id="@+id/tvTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textColor="@color/colorTextHeading"
+                            android:layout_marginTop="@dimen/margin_16dp"
+                            android:fontFamily="@font/avenir_black"
+                            android:text="@string/no_completed_booking"
+                            android:textSize="@dimen/font_16sp"
+                            />
 
+
+                    </LinearLayout>
+                </FrameLayout>
+
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+        </RelativeLayout>
+
+    </FrameLayout>
 
 </layout>
