working on workoutplan

--- a/app/src/main/res/layout/dialog_buy_membership.xml
+++ b/app/src/main/res/layout/dialog_buy_membership.xml
@@ -61,7 +61,7 @@
 
 
             <Button
-                android:id="@+id/btnConfirmSlot"
+                android:id="@+id/btnConfirmMembership"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_8dp"
