--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -120,7 +120,7 @@
                         android:background="@drawable/rating_bg"
                         android:backgroundTint="@color/colorPrimary"
                         android:padding="@dimen/dimen_10"
-                        android:layout_marginTop="@dimen/dimen_7">
+                        android:layout_marginTop="@dimen/dimen_12">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -128,7 +128,7 @@
                             android:orientation="horizontal">
 
                             <com.dinuscxj.progressbar.CircleProgressBar
-                                android:id="@+id/line_progress"
+                                android:id="@+id/workoutProgress"
                                 android:layout_width="@dimen/dimen_50"
                                 android:layout_height="@dimen/dimen_50"
                                 android:layout_gravity="center"
@@ -161,7 +161,7 @@
                                         android:id="@+id/tvCalsLeft"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="56656"
+                                        android:text="0"
                                         android:maxLines="1"
                                         android:textColor="@color/white"
                                         android:textSize="@dimen/font_11sp"
@@ -189,7 +189,7 @@
                                         android:id="@+id/tvConsumed"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="56656"
+                                        android:text="0"
                                         android:maxLines="1"
                                         android:textColor="@color/white"
                                         android:textSize="@dimen/font_11sp"
@@ -217,7 +217,7 @@
                                         android:id="@+id/tvBurned"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="56656"
+                                        android:text="0"
                                         android:maxLines="1"
                                         android:textColor="@color/white"
                                         android:textSize="@dimen/font_11sp"
@@ -226,7 +226,7 @@
                                     <me.grantland.widget.AutofitTextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="@string/consumed"
+                                        android:text="@string/burns"
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_9sp"
@@ -262,14 +262,43 @@
                                     android:textSize="@dimen/font_9sp"
                                     android:fontFamily="@font/avenir_light"/>
 
-                                <me.grantland.widget.AutofitTextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="60kg"
-                                    android:textColor="@color/white"
-                                    android:maxLines="1"
-                                    android:textSize="@dimen/font_9sp"
-                                    android:fontFamily="@font/avenir_black"/>
+                                <LinearLayout
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+
+                                    <me.grantland.widget.AutofitTextView
+                                        android:id="@+id/tvDietConsumedProtien"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="60kg"
+                                        android:textColor="@color/white"
+                                        android:maxLines="1"
+                                        android:textSize="@dimen/font_9sp"
+                                        android:fontFamily="@font/avenir_black"/>
+
+                                    <TextView
+                                        android:text="/"
+                                        android:textColor="@color/white"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content">
+                                    </TextView>
+
+                                    <me.grantland.widget.AutofitTextView
+                                        android:id="@+id/tvPlanProtien"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="60kg"
+                                        android:textColor="@color/white"
+                                        android:maxLines="1"
+                                        android:textSize="@dimen/font_12sp"
+                                        android:fontFamily="@font/avenir_black"/>
+
+                                </LinearLayout>
+
+
 
                             </LinearLayout>
 
@@ -289,14 +318,41 @@
                                     android:textSize="@dimen/font_9sp"
                                     android:fontFamily="@font/avenir_light"/>
 
-                                <me.grantland.widget.AutofitTextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="60kg"
-                                    android:textColor="@color/white"
-                                    android:maxLines="1"
-                                    android:textSize="@dimen/font_9sp"
-                                    android:fontFamily="@font/avenir_black"/>
+                                <LinearLayout
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+
+                                    <me.grantland.widget.AutofitTextView
+                                        android:id="@+id/tvDietConsumedCabs"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="60kg"
+                                        android:textColor="@color/white"
+                                        android:maxLines="1"
+                                        android:textSize="@dimen/font_9sp"
+                                        android:fontFamily="@font/avenir_black"/>
+
+                                    <TextView
+                                        android:text="/"
+                                        android:textColor="@color/white"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content">
+                                    </TextView>
+
+                                    <me.grantland.widget.AutofitTextView
+                                        android:id="@+id/tvPlanCabs"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="60kg"
+                                        android:textColor="@color/white"
+                                        android:maxLines="1"
+                                        android:textSize="@dimen/font_12sp"
+                                        android:fontFamily="@font/avenir_black"/>
+
+                                </LinearLayout>
 
                             </LinearLayout>
 
@@ -316,14 +372,41 @@
                                     android:textSize="@dimen/font_9sp"
                                     android:fontFamily="@font/avenir_light"/>
 
-                                <me.grantland.widget.AutofitTextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="60kg"
-                                    android:textColor="@color/white"
-                                    android:maxLines="1"
-                                    android:textSize="@dimen/font_9sp"
-                                    android:fontFamily="@font/avenir_black"/>
+                                <LinearLayout
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+
+                                    <me.grantland.widget.AutofitTextView
+                                        android:id="@+id/tvDietConsumedFat"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="60kg"
+                                        android:textColor="@color/white"
+                                        android:maxLines="1"
+                                        android:textSize="@dimen/font_9sp"
+                                        android:fontFamily="@font/avenir_black"/>
+
+                                    <TextView
+                                        android:text="/"
+                                        android:textColor="@color/white"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content">
+                                    </TextView>
+
+                                    <me.grantland.widget.AutofitTextView
+                                        android:id="@+id/tvPlanFat"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="60kg"
+                                        android:textColor="@color/white"
+                                        android:maxLines="1"
+                                        android:textSize="@dimen/font_12sp"
+                                        android:fontFamily="@font/avenir_black"/>
+
+                                </LinearLayout>
 
                             </LinearLayout>
 
@@ -343,14 +426,41 @@
                                     android:textSize="@dimen/font_9sp"
                                     android:fontFamily="@font/avenir_light"/>
 
-                                <me.grantland.widget.AutofitTextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="60kg"
-                                    android:textColor="@color/white"
-                                    android:maxLines="1"
-                                    android:textSize="@dimen/font_9sp"
-                                    android:fontFamily="@font/avenir_black"/>
+                                <LinearLayout
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+
+                                    <me.grantland.widget.AutofitTextView
+                                        android:id="@+id/tvDietConsumedCalories"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="60kg"
+                                        android:textColor="@color/white"
+                                        android:maxLines="1"
+                                        android:textSize="@dimen/font_9sp"
+                                        android:fontFamily="@font/avenir_black"/>
+
+                                    <TextView
+                                        android:text="/"
+                                        android:textColor="@color/white"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content">
+                                    </TextView>
+
+                                    <me.grantland.widget.AutofitTextView
+                                        android:id="@+id/tvPlanCalories"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="60kg"
+                                        android:textColor="@color/white"
+                                        android:maxLines="1"
+                                        android:textSize="@dimen/font_12sp"
+                                        android:fontFamily="@font/avenir_black"/>
+
+                                </LinearLayout>
 
                             </LinearLayout>
 
@@ -363,9 +473,11 @@
                         android:id="@+id/lnrNoWorkoutPlanAvailable"
                         android:orientation="vertical"
                         android:layout_gravity="center"
+                        android:gravity="center"
+                        android:layout_marginTop="@dimen/dimen_100"
                         android:visibility="gone"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent">
 
                         <ImageView
                             android:id="@+id/imgNoWorkout"
@@ -415,8 +527,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
-
-
                 </LinearLayout>
 
 
@@ -424,31 +534,33 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <LinearLayout
-            android:layout_marginStart="@dimen/margin_16dp"
-            android:layout_marginEnd="@dimen/margin_16dp"
-            android:layout_marginBottom="@dimen/margin_16dp"
+     <LinearLayout
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/lnrEdit"
-            android:background="@color/white"
+             android:paddingTop="@dimen/margin_8dp"
+            android:paddingStart="@dimen/margin_16dp"
+            android:paddingEnd="@dimen/margin_16dp"
+            android:paddingBottom="@dimen/margin_16dp"
             android:gravity="center"
-            android:visibility="visible"
+            android:visibility="gone"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
                 android:id="@+id/btnEditWorkoutPlan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_edit_diet"
                 android:fontFamily="@font/avenir_roman"
                 android:text="@string/edit_workout_plan"
-                android:layout_marginBottom="@dimen/margin_16dp"
+                android:gravity="center"
+                android:paddingTop="@dimen/margin_16dp"
+                android:paddingBottom="@dimen/margin_16dp"
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:textAllCaps="false">
-            </Button>
+            </TextView>
 
 
         </LinearLayout>
