--- a/app/src/main/res/layout/row_up_coming_booking.xml
+++ b/app/src/main/res/layout/row_up_coming_booking.xml
@@ -61,13 +61,23 @@
             android:layout_marginTop="@dimen/margin_8dp"
             android:orientation="horizontal">
 
-            <com.github.siyamed.shapeimageview.RoundedImageView
-                android:id="@+id/ivCenterImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:siBorderColor="@color/white"
-                android:src="@drawable/user"
-                app:siRadius="@dimen/dimen_10" />
+            <LinearLayout
+                android:background="@drawable/rating_bg"
+                android:layout_width="@dimen/dimen_100"
+                android:id="@+id/lnrCenter"
+                android:layout_height="@dimen/dimen_100"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="@dimen/dimen_7"
+                android:backgroundTint="@color/colorBranchBg1">
+
+                <ImageView
+                    android:id="@+id/ivCenterImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/user"/>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -97,8 +107,8 @@
                         android:layout_height="wrap_content"
                         android:text="@string/tenure"
                         android:textSize="@dimen/font_12sp"
-                        android:textColor="@color/colorTextLightDark"
-                        android:fontFamily="@font/avenir_black" />
+                        android:textColor="@color/colorPrimaryDark"
+                        android:fontFamily="@font/avenir_light" />
 
                     <TextView
                         android:id="@+id/tvTenureName"
