--- a/app/src/main/res/layout/row_workout_days.xml
+++ b/app/src/main/res/layout/row_workout_days.xml
@@ -1,23 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <variable
-            name="workoutDay"
-            type="com.htf.diva.models.Workout" />
-        <import type="android.view.View"/>
-    </data>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dimen_12"
-        android:layout_marginEnd="@dimen/dimen_12"
-        android:layout_marginTop="@dimen/margin_8dp"
-        android:layout_marginBottom="@dimen/margin_4dp"
-        android:padding="@dimen/dimen_5"
-        android:orientation="vertical"
-        android:background="@drawable/meal_type_rect_bg">
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="@dimen/dimen_12"
+    android:layout_marginEnd="@dimen/dimen_12"
+    android:layout_marginTop="@dimen/margin_8dp"
+    android:layout_marginBottom="@dimen/margin_4dp"
+    android:padding="@dimen/dimen_5"
+    android:orientation="vertical"
+    android:background="@drawable/meal_type_rect_bg"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
         <LinearLayout
@@ -42,9 +34,9 @@
                 android:layout_marginStart="@dimen/dimen_5">
 
                 <TextView
+                    android:id="@+id/tvWorkoutName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    userName="@{workoutDay.name}"
                     android:layout_marginStart="8dp"
                     android:textSize="@dimen/font_16sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -191,5 +183,4 @@
     </LinearLayout>
 
 
-</layout>
 
