--- a/app/src/main/res/layout/row_workout_weekdays.xml
+++ b/app/src/main/res/layout/row_workout_weekdays.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <data>
-        <variable
-            name="workoutWeekDays"
-            type="com.htf.diva.models.WorkoutWeekDaysModel" />
-        <import type="android.view.View"/>
-    </data>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_16dp"
-        android:layout_marginEnd="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_12dp"
-        android:layout_marginBottom="@dimen/margin_4dp"
-        android:padding="@dimen/dimen_7"
-        android:elevation="@dimen/dimen_1"
-        android:orientation="vertical"
-        android:background="@drawable/diet_weekdays_stroke_bg">
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="@dimen/margin_16dp"
+    android:layout_marginEnd="@dimen/margin_16dp"
+    android:layout_marginTop="@dimen/margin_12dp"
+    android:layout_marginBottom="@dimen/margin_4dp"
+    android:padding="@dimen/dimen_7"
+    android:elevation="@dimen/dimen_1"
+    android:orientation="vertical"
+    android:background="@drawable/diet_weekdays_stroke_bg"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -37,11 +30,11 @@
                 android:visibility="visible">
 
                 <TextView
+                    android:id="@+id/tvWeekDayName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="@dimen/font_16sp"
                     android:textColor="@color/black"
-                    userName="@{workoutWeekDays.name}"
                     android:padding="@dimen/font_10sp"
                     android:fontFamily="@font/avenir_light"
                     android:text="@string/my_diet_plan" />
@@ -55,35 +48,86 @@
         android:layout_marginEnd="@dimen/margin_8dp"
         android:layout_toStartOf="@+id/llWorkoutAddWeekDay"
         android:visibility="visible"
-        android:background="@drawable/add_rect_bg"
         android:layout_width="wrap_content"
         android:gravity="start"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ivDayRest"
-            android:visibility="visible"
-            android:layout_gravity="center"
-            android:layout_width="@dimen/dimen_20"
-            android:layout_height="@dimen/dimen_20"
-            android:src="@drawable/checkout_list_mark" />
+
+       <LinearLayout
+           android:id="@+id/llDayRest"
+           android:visibility="gone"
+           android:orientation="horizontal"
+           android:layout_width="wrap_content"
+           android:background="@drawable/add_rect_bg"
+           android:backgroundTint="@color/white"
+           android:layout_height="wrap_content">
+
+           <ImageView
+               android:id="@+id/ivDayRest"
+               android:visibility="visible"
+               android:layout_gravity="center"
+               android:layout_marginStart="@dimen/margin_4dp"
+               android:layout_width="@dimen/dimen_15"
+               android:backgroundTint="@color/gray3"
+               app:tint="@color/grey"
+               android:layout_height="@dimen/dimen_15"
+               android:src="@drawable/checkout_list_mark"
+               />
+
+           <TextView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textSize="@dimen/font_14sp"
+               android:textColor="@color/colorTextLightDark"
+               android:paddingTop="@dimen/dimen_5"
+               android:paddingStart="@dimen/dimen_10"
+               android:paddingEnd="@dimen/dimen_10"
+               android:paddingBottom="@dimen/dimen_5"
+               android:fontFamily="@font/avenir_light"
+               android:text="@string/day_rest" />
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/font_14sp"
-                    android:textColor="@color/black"
-                    android:paddingTop="@dimen/dimen_5"
-                    android:paddingStart="@dimen/dimen_10"
-                    android:paddingEnd="@dimen/dimen_10"
-                    android:paddingBottom="@dimen/dimen_5"
-                    android:fontFamily="@font/avenir_light"
-                    android:text="@string/day_rest" />
+       </LinearLayout>
 
 
-            </LinearLayout>
+      <LinearLayout
+           android:id="@+id/llOnRest"
+           android:visibility="gone"
+           android:orientation="horizontal"
+           android:layout_width="wrap_content"
+           android:background="@drawable/on_rest_rect"
+           android:layout_height="wrap_content">
+
+       <ImageView
+           android:id="@+id/ivOnRest"
+           android:layout_gravity="center"
+           android:layout_width="@dimen/dimen_15"
+           app:tint="@color/red"
+           android:backgroundTint="@color/red"
+           android:layout_marginStart="@dimen/margin_4dp"
+           android:layout_height="@dimen/dimen_15"
+           android:src="@drawable/checkout_list_mark" />
+
+
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:textSize="@dimen/font_14sp"
+           android:textColor="@color/red"
+           android:paddingTop="@dimen/dimen_5"
+           android:paddingStart="@dimen/dimen_10"
+           android:paddingEnd="@dimen/dimen_10"
+           android:paddingBottom="@dimen/dimen_5"
+           android:fontFamily="@font/avenir_light"
+           android:text="@string/on_rest" />
+
+
+
+   </LinearLayout>
+
+
+   </LinearLayout>
 
 
 
@@ -114,7 +158,7 @@
                         android:paddingEnd="@dimen/dimen_10"
                         android:paddingBottom="@dimen/dimen_5"
                         android:fontFamily="@font/avenir_light"
-                        android:text="@string/add" />
+                        android:text="@string/view" />
 
                 </LinearLayout>
 
@@ -134,7 +178,4 @@
 
 
     </LinearLayout>
-
-
-</layout>
 
